Fix issue with too much space between rows by changing grid align-content to flex-start

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 #grid{
     display: flex;
+    align-content: flex-start;
     margin: 0px;
     padding: 0px;
     flex-wrap: wrap;
